# StudyBattles

./: .gitignore  LICENSE.md  README.md  main.py  plan.json  pyproject.toml  tsconfig.json
.github/workflows/: phasecompiler-import.yml
backend/: conftest.py  requirements.txt
backend/app/: .env.example  config.py  db.py  dependencies.py  main.py
backend/app/models/: attempt.py  document.py  node.py  session.py  tree.py
backend/app/routes/: auth.py  evaluate.py  generate_questions.py  generate_tree.py  health.py  session.py  upload.py
backend/tests/: conftest.py  test_auth.py  test_evaluate.py  test_generate_new_question.py  test_generate_tree.py  test_rate_limiting.py  test_session.py  test_upload.py  test_workflow.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CollapsibleTree.css  CollapsibleTree.jsx  PasswordGate.jsx
frontend/src/pages/: Home.css  Home.jsx  QuestionScreen.css  QuestionScreen.jsx
frontend/src/tests/: CollapsibleTree.completed.test.jsx  CollapsibleTree.test.jsx  Home.error-handling.test.jsx  Home.loading-states.test.jsx  Home.reset.test.jsx  Home.session-persistence.test.jsx  Home.session-restore.test.jsx  QuestionScreen.error-handling.test.jsx  QuestionScreen.loading-states.test.jsx  QuestionScreen.new-question.test.jsx  QuestionScreen.prefetch.test.jsx  QuestionScreen.previously-completed.test.jsx  QuestionScreen.test.jsx  detectNewlyUnlocked.test.js
frontend/src/utils/: detectNewlyUnlocked.js
scripts/: phasecompiler_import.py
